--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI="mongodb+srv://lin:linthu52396@cluster0.fb14r.mongodb.net/storedb?retryWrites=true&w=majority"
 NODE_ENV=production 
+TOKEN_KEY=kmt52396
